exp1: updated headings and scores

--- a/experiment1.ipynb
+++ b/experiment1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tasks:\n",
+    "# Tasks:\n",
     "\n",
     "- No preprocessing steps. Just rows with null values have been removed.\n",
     "- Highest Accuracy: `('LightGBM', 0.8768075946572469)`"
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import Libraries"
+    "# Import Libraries"
    ]
   },
   {
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dataset loading"
+    "# Dataset"
    ]
   },
   {
@@ -42,14 +42,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../Data/adult.csv', na_values=\"?\", skipinitialspace=True)"
+    "df = pd.read_csv('../data/adult.csv', na_values=\"?\", skipinitialspace=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Categorical Data Encoding"
+    "## Categorical Data Encoding"
    ]
   },
   {
@@ -203,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Feature and Target Separation"
+    "## Feature and Target Separation"
    ]
   },
   {
@@ -304,7 +304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Splitting"
+    "## Splitting"
    ]
   },
   {
@@ -333,7 +333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finding and Removing Null Values"
+    "# Finding and Removing Null Values"
    ]
   },
   {
@@ -500,7 +500,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Allign the y_train and y_test according to the indecies of X_train and X_test"
+    "## Allign the y_train and y_test according to the indecies of X_train and X_test"
    ]
   },
   {
@@ -517,7 +517,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Apply Models"
+    "# Apply Models"
    ]
   },
   {
@@ -604,26 +604,26 @@
       "\n",
       "\n",
       "Model: Decision Tree\n",
-      "Accuracy: 0.8168672038856386\n",
+      "Accuracy: 0.8186334032453914\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.88      0.87      0.88      6867\n",
-      "           1       0.62      0.64      0.63      2192\n",
+      "           0       0.89      0.87      0.88      6867\n",
+      "           1       0.62      0.65      0.63      2192\n",
       "\n",
       "    accuracy                           0.82      9059\n",
-      "   macro avg       0.75      0.76      0.75      9059\n",
+      "   macro avg       0.75      0.76      0.76      9059\n",
       "weighted avg       0.82      0.82      0.82      9059\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[5993  874]\n",
-      " [ 785 1407]]\n",
+      "[[6002  865]\n",
+      " [ 778 1414]]\n",
       "--------------------------------------------------------------------------------\n",
-      "Accuracy for Decision Tree: 0.8168672038856386\n",
+      "Accuracy for Decision Tree: 0.8186334032453914\n",
       "\n",
       "\n",
       "Model: Random Forest\n",
-      "Accuracy: 0.861242962799426\n",
+      "Accuracy: 0.861022187879457\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
@@ -636,9 +636,9 @@
       "\n",
       "Confusion Matrix:\n",
       "[[6382  485]\n",
-      " [ 772 1420]]\n",
+      " [ 774 1418]]\n",
       "--------------------------------------------------------------------------------\n",
-      "Accuracy for Random Forest: 0.861242962799426\n",
+      "Accuracy for Random Forest: 0.861022187879457\n",
       "\n",
       "\n",
       "Model: Support Vector Classifier\n",
@@ -732,7 +732,7 @@
       "\n",
       "\n",
       "[LightGBM] [Info] Number of positive: 9016, number of negative: 27147\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.001187 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.001292 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 703\n",
@@ -797,22 +797,22 @@
       "\n",
       "\n",
       "Model: Bagging\n",
-      "Accuracy: 0.8525223534606469\n",
+      "Accuracy: 0.8516392537807705\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.88      0.93      0.91      6867\n",
-      "           1       0.74      0.61      0.67      2192\n",
+      "           0       0.88      0.93      0.90      6867\n",
+      "           1       0.73      0.61      0.67      2192\n",
       "\n",
       "    accuracy                           0.85      9059\n",
-      "   macro avg       0.81      0.77      0.79      9059\n",
+      "   macro avg       0.81      0.77      0.78      9059\n",
       "weighted avg       0.85      0.85      0.85      9059\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[6385  482]\n",
-      " [ 854 1338]]\n",
+      "[[6381  486]\n",
+      " [ 858 1334]]\n",
       "--------------------------------------------------------------------------------\n",
-      "Accuracy for Bagging: 0.8525223534606469\n",
+      "Accuracy for Bagging: 0.8516392537807705\n",
       "\n",
       "\n",
       "All the accuracies:\n",
@@ -820,8 +820,8 @@
       "****************************************************************************************************\n",
       "{\n",
       "    \"Logistic Regression\": 0.7939066122088531,\n",
-      "    \"Decision Tree\": 0.8168672038856386,\n",
-      "    \"Random Forest\": 0.861242962799426,\n",
+      "    \"Decision Tree\": 0.8186334032453914,\n",
+      "    \"Random Forest\": 0.861022187879457,\n",
       "    \"Support Vector Classifier\": 0.7969974610884204,\n",
       "    \"Naive Bayes\": 0.7930235125289767,\n",
       "    \"Gradient Boosting\": 0.8686389226183906,\n",
@@ -829,7 +829,7 @@
       "    \"LightGBM\": 0.8768075946572469,\n",
       "    \"XGBoost\": 0.873385583397726,\n",
       "    \"KNeighbors\": 0.7758030687713876,\n",
-      "    \"Bagging\": 0.8525223534606469\n",
+      "    \"Bagging\": 0.8516392537807705\n",
       "}\n"
      ]
     }
@@ -842,7 +842,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Highest Accuracy"
+    "## Highest Accuracy"
    ]
   },
   {
