exp2: replaced null values with mean

--- a/experiment2.ipynb
+++ b/experiment2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tasks\n",
+    "# Tasks\n",
     "- Null values have been replaced with `mean`\n",
     "- Highest accuracy: `('LightGBM', 0.8786979219981574)`"
    ]
@@ -13,12 +13,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import Libraries"
+    "# Import Libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,12 +32,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dataset loading"
+    "# Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,12 +48,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Categorical Data Encoding"
+    "## Categorical Data Encoding"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -202,12 +202,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Feature and Target Separation"
+    "## Feature and Target Separation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -303,12 +303,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Splitting"
+    "## Splitting"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -332,12 +332,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finding and Removing Null Values"
+    "## Finding and Removing Null Values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -465,12 +465,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Allign the y_train and y_test according to the indecies of X_train and X_test"
+    "## Allign the y_train and y_test according to the indecies of X_train and X_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,12 +482,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Apply Models"
+    "# Apply Models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +516,7 @@
        " 'Bagging': BaggingClassifier()}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -569,41 +569,41 @@
       "\n",
       "\n",
       "Model: Decision Tree\n",
-      "Accuracy: 0.8189169822909202\n",
+      "Accuracy: 0.8162555020984748\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.89      0.87      0.88      7479\n",
-      "           1       0.61      0.64      0.62      2290\n",
+      "           1       0.60      0.63      0.62      2290\n",
       "\n",
       "    accuracy                           0.82      9769\n",
-      "   macro avg       0.75      0.76      0.75      9769\n",
+      "   macro avg       0.74      0.75      0.75      9769\n",
       "weighted avg       0.82      0.82      0.82      9769\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[6544  935]\n",
-      " [ 834 1456]]\n",
+      "[[6531  948]\n",
+      " [ 847 1443]]\n",
       "--------------------------------------------------------------------------------\n",
-      "Accuracy for Decision Tree: 0.8189169822909202\n",
+      "Accuracy for Decision Tree: 0.8162555020984748\n",
       "\n",
       "\n",
       "Model: Random Forest\n",
-      "Accuracy: 0.8638550516941345\n",
+      "Accuracy: 0.8664141672637936\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.89      0.93      0.91      7479\n",
-      "           1       0.75      0.63      0.69      2290\n",
+      "           0       0.90      0.93      0.91      7479\n",
+      "           1       0.75      0.64      0.69      2290\n",
       "\n",
-      "    accuracy                           0.86      9769\n",
-      "   macro avg       0.82      0.78      0.80      9769\n",
-      "weighted avg       0.86      0.86      0.86      9769\n",
+      "    accuracy                           0.87      9769\n",
+      "   macro avg       0.82      0.79      0.80      9769\n",
+      "weighted avg       0.86      0.87      0.86      9769\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[6985  494]\n",
-      " [ 836 1454]]\n",
+      "[[6992  487]\n",
+      " [ 818 1472]]\n",
       "--------------------------------------------------------------------------------\n",
-      "Accuracy for Random Forest: 0.8638550516941345\n",
+      "Accuracy for Random Forest: 0.8664141672637936\n",
       "\n",
       "\n",
       "Model: Support Vector Classifier\n",
@@ -697,7 +697,7 @@
       "\n",
       "\n",
       "[LightGBM] [Info] Number of positive: 9397, number of negative: 29676\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.001129 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.001619 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 718\n",
@@ -762,22 +762,22 @@
       "\n",
       "\n",
       "Model: Bagging\n",
-      "Accuracy: 0.8559729757395844\n",
+      "Accuracy: 0.8535162247927116\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.88      0.93      0.91      7479\n",
-      "           1       0.73      0.60      0.66      2290\n",
+      "           1       0.72      0.60      0.66      2290\n",
       "\n",
-      "    accuracy                           0.86      9769\n",
-      "   macro avg       0.81      0.77      0.79      9769\n",
-      "weighted avg       0.85      0.86      0.85      9769\n",
+      "    accuracy                           0.85      9769\n",
+      "   macro avg       0.80      0.77      0.78      9769\n",
+      "weighted avg       0.85      0.85      0.85      9769\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[6979  500]\n",
-      " [ 907 1383]]\n",
+      "[[6953  526]\n",
+      " [ 905 1385]]\n",
       "--------------------------------------------------------------------------------\n",
-      "Accuracy for Bagging: 0.8559729757395844\n",
+      "Accuracy for Bagging: 0.8535162247927116\n",
       "\n",
       "\n",
       "All the accuracies:\n",
@@ -785,8 +785,8 @@
       "****************************************************************************************************\n",
       "{\n",
       "    \"Logistic Regression\": 0.8036646534957519,\n",
-      "    \"Decision Tree\": 0.8189169822909202,\n",
-      "    \"Random Forest\": 0.8638550516941345,\n",
+      "    \"Decision Tree\": 0.8162555020984748,\n",
+      "    \"Random Forest\": 0.8664141672637936,\n",
       "    \"Support Vector Classifier\": 0.8035622888729655,\n",
       "    \"Naive Bayes\": 0.7994677039615109,\n",
       "    \"Gradient Boosting\": 0.8720442215170437,\n",
@@ -794,7 +794,7 @@
       "    \"LightGBM\": 0.8786979219981574,\n",
       "    \"XGBoost\": 0.878288463507012,\n",
       "    \"KNeighbors\": 0.7822704473334016,\n",
-      "    \"Bagging\": 0.8559729757395844\n",
+      "    \"Bagging\": 0.8535162247927116\n",
       "}\n"
      ]
     }
@@ -807,12 +807,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Highest Accuracy"
+    "## Highest Accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
        "('LightGBM', 0.8786979219981574)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
