exp3: train-test split ratio 70:30

--- a/experiment3.ipynb
+++ b/experiment3.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tasks\n",
+    "# Tasks\n",
     "- Split the dataset `70-30` ratio\n",
     "- Null values have been replaced with `mean`\n",
     "- Highest accuracy: `('LightGBM', 0.8792738688323211)`"
@@ -14,12 +14,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import Libraries"
+    "# Import Libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dataset loading"
+    "# Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,12 +49,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Categorical Data Encoding"
+    "## Categorical Data Encoding"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -203,12 +203,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Feature and Target Separation"
+    "## Feature and Target Separation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -304,12 +304,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Splitting"
+    "## Splitting"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -333,12 +333,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finding and Removing Null Values"
+    "## Finding and Removing Null Values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -466,12 +466,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Allign the y_train and y_test according to the indecies of X_train and X_test"
+    "## Allign the y_train and y_test according to the indecies of X_train and X_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,12 +483,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Apply Models"
+    "# Apply Models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
        " 'Bagging': BaggingClassifier()}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
       "\n",
       "\n",
       "Model: Decision Tree\n",
-      "Accuracy: 0.8161468641233877\n",
+      "Accuracy: 0.817716508564799\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
@@ -578,33 +578,33 @@
       "           1       0.60      0.64      0.62      3420\n",
       "\n",
       "    accuracy                           0.82     14653\n",
-      "   macro avg       0.74      0.75      0.75     14653\n",
+      "   macro avg       0.75      0.76      0.75     14653\n",
       "weighted avg       0.82      0.82      0.82     14653\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[9777 1456]\n",
-      " [1238 2182]]\n",
+      "[[9797 1436]\n",
+      " [1235 2185]]\n",
       "--------------------------------------------------------------------------------\n",
-      "Accuracy for Decision Tree: 0.8161468641233877\n",
+      "Accuracy for Decision Tree: 0.817716508564799\n",
       "\n",
       "\n",
       "Model: Random Forest\n",
-      "Accuracy: 0.8633044427762233\n",
+      "Accuracy: 0.8643963693441616\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.89      0.93      0.91     11233\n",
-      "           1       0.74      0.63      0.68      3420\n",
+      "           0       0.90      0.93      0.91     11233\n",
+      "           1       0.74      0.64      0.69      3420\n",
       "\n",
       "    accuracy                           0.86     14653\n",
-      "   macro avg       0.82      0.78      0.80     14653\n",
+      "   macro avg       0.82      0.79      0.80     14653\n",
       "weighted avg       0.86      0.86      0.86     14653\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[10481   752]\n",
-      " [ 1251  2169]]\n",
+      "[[10472   761]\n",
+      " [ 1226  2194]]\n",
       "--------------------------------------------------------------------------------\n",
-      "Accuracy for Random Forest: 0.8633044427762233\n",
+      "Accuracy for Random Forest: 0.8643963693441616\n",
       "\n",
       "\n",
       "Model: Support Vector Classifier\n",
@@ -698,7 +698,7 @@
       "\n",
       "\n",
       "[LightGBM] [Info] Number of positive: 8267, number of negative: 25922\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000813 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.001312 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 710\n",
@@ -763,22 +763,22 @@
       "\n",
       "\n",
       "Model: Bagging\n",
-      "Accuracy: 0.8542278031802362\n",
+      "Accuracy: 0.856548147137105\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.89      0.93      0.91     11233\n",
       "           1       0.73      0.60      0.66      3420\n",
       "\n",
-      "    accuracy                           0.85     14653\n",
-      "   macro avg       0.81      0.77      0.78     14653\n",
-      "weighted avg       0.85      0.85      0.85     14653\n",
+      "    accuracy                           0.86     14653\n",
+      "   macro avg       0.81      0.77      0.79     14653\n",
+      "weighted avg       0.85      0.86      0.85     14653\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[10451   782]\n",
-      " [ 1354  2066]]\n",
+      "[[10486   747]\n",
+      " [ 1355  2065]]\n",
       "--------------------------------------------------------------------------------\n",
-      "Accuracy for Bagging: 0.8542278031802362\n",
+      "Accuracy for Bagging: 0.856548147137105\n",
       "\n",
       "\n",
       "All the accuracies:\n",
@@ -786,8 +786,8 @@
       "****************************************************************************************************\n",
       "{\n",
       "    \"Logistic Regression\": 0.8029072544871357,\n",
-      "    \"Decision Tree\": 0.8161468641233877,\n",
-      "    \"Random Forest\": 0.8633044427762233,\n",
+      "    \"Decision Tree\": 0.817716508564799,\n",
+      "    \"Random Forest\": 0.8643963693441616,\n",
       "    \"Support Vector Classifier\": 0.8041356718760664,\n",
       "    \"Naive Bayes\": 0.8000409472462977,\n",
       "    \"Gradient Boosting\": 0.8725858186036989,\n",
@@ -795,7 +795,7 @@
       "    \"LightGBM\": 0.8792738688323211,\n",
       "    \"XGBoost\": 0.8779772060328943,\n",
       "    \"KNeighbors\": 0.7803862690234081,\n",
-      "    \"Bagging\": 0.8542278031802362\n",
+      "    \"Bagging\": 0.856548147137105\n",
       "}\n"
      ]
     }
@@ -808,12 +808,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Highest Accuracy"
+    "## Highest Accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
        "('LightGBM', 0.8792738688323211)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
